<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".controlmeasure.ControlMeasureFragment">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    app:title="@string/control_measure"
                    app:navigationIcon="@drawable/ic_back"
                    app:titleTextColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    />
            </com.google.android.material.appbar.AppBarLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_24"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/maize_stem_borer"
                android:textColor="@color/colorBlue"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

            <TextView
                android:id="@+id/controlMeasure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineHeight="@dimen/margin_24"
                android:textSize="16sp"
                android:lineSpacingExtra="4dp"
                android:justificationMode="inter_word"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_marginRight="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/control"
                app:layout_constraintTop_toBottomOf="@id/title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>