<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/capturedInsect"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_48"
        app:cardBackgroundColor="@color/colorBlue"
        app:cardCornerRadius="@dimen/card_radius_20"
        android:layout_height="@dimen/height_100">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/captured_insect"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/categories"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/capturedInsect"
        android:layout_margin="@dimen/margin_16"
        app:cardBackgroundColor="@color/colorGreen"
        app:cardCornerRadius="@dimen/card_radius_20"
        android:layout_height="@dimen/height_100">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/categories"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/maizePlot"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/categories"
        android:layout_margin="@dimen/margin_16"
        app:cardBackgroundColor="@color/colorLightPurple"
        app:cardCornerRadius="@dimen/card_radius_20"
        android:layout_height="@dimen/height_100">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/maize_plot"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/controlMeasure"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/maizePlot"
        android:layout_margin="@dimen/margin_16"
        app:cardBackgroundColor="@color/colorPurple"
        app:cardCornerRadius="@dimen/card_radius_20"
        android:layout_height="@dimen/height_100">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/maize_plot"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>